--- a/www/royalBlue.css
+++ b/www/royalBlue.css
@@ -44,7 +44,8 @@
              padding-left: 15px;}
 
 /* Boxes_____________________________________________________________________________________ */
-.card card-primary {background: #3c8dbc}
+.card card-primary {background: #3c8dbc;
+                    min-height: 300px}
 .card-header {background: #3c8dbc;
               color: white;}
 .card-title {font-weight: bold;
@@ -124,4 +125,8 @@
 
 .btn.dropdown-toggle.btn-light {
   height:38px;
+}
+
+#diffeq_box {
+  min-height: 300px;
 }
