--- a/www/royalBlue.css
+++ b/www/royalBlue.css
@@ -55,14 +55,20 @@
 /* Buttons__________________________________________________________________________________ */
 .btn {background-color:#3c8dbc;
       color:white;
-      border-color:black;
+      border-color:white;
       border-style:solid;
-      border-width:1px;;
+      border-width:0px;;
       font-size:18px;}
 
 .btn-dropdownbutton {background-color: #3c8dbc !important;
-                     color: white;}
+                     color: white;
+                     border-width:0px !important;}
 
+.btn-group {
+	border-color: white;
+	border-style: solid;
+	border-width: 0.5px;
+}
 /* DT table */
 /*table.dataTable {background-color:#3c8dbc;
                  color: black;
