things I did at work mostly button group for plotting

--- a/www/royalBlue.css
+++ b/www/royalBlue.css
@@ -156,3 +156,24 @@ table.dataTable thead th, table.dataTable thead td {
 
 #sw-content-plot_option_dropdown {min-width: 50rem;
                                  min-height: 25rem;}
+
+/*
+#lineplot_dropdown_1 {display:block; 
+                      width:100%; 
+                      border:1px solid black;
+                      background-color:#ecf0f5;}
+
+#lineplot_dropdown_2 {display:block; 
+                      width:100%; 
+                      border:1px solid black;
+                      background-color:#ecf0f5;}
+
+#lineplot_dropdown_3 {display:block; 
+                      width:100%; 
+                      border:1px solid black;
+                      background-color:#ecf0f5;}
+
+#lineplot_dropdown_4 {display:block; 
+                      width:100%; 
+                      border:1px solid black;
+                      background-color:#ecf0f5;}*/
