--- a/www/royalBlue.css
+++ b/www/royalBlue.css
@@ -112,6 +112,19 @@
                                                          top: -2px;
                                                          left: 3px;}
 
+#lineplot_dropdown_1 > .glyphicon-triangle-bottom {font-size: 9px;
+                                                         top: -2px;
+                                                         left: 3px;}                                                      
+#lineplot_dropdown_2 > .glyphicon-triangle-bottom {font-size: 9px;
+                                                         top: -2px;
+                                                         left: 3px;}
+#lineplot_dropdown_3 > .glyphicon-triangle-bottom {font-size: 9px;
+                                                         top: -2px;
+                                                         left: 3px;}
+#lineplot_dropdown_4 > .glyphicon-triangle-bottom {font-size: 9px;
+                                                         top: -2px;
+                                                         left: 3px;}
+
 
 /*These three tags make it so the fancy buttons on the homepage are highlighted on hover*/
 #HOME_build_model:hover{
