--- a/www/royalBlue.css
+++ b/www/royalBlue.css
@@ -195,26 +195,22 @@ table.dataTable thead th, table.dataTable thead td {
 #sw-content-plot_option_dropdown {min-width: 50rem;
                                  min-height: 25rem;}
 
-/*
+
 #lineplot_dropdown_1 {display:block; 
                       width:100%; 
-                      border:1px solid black;
-                      background-color:#ecf0f5;}
+                      border:0px solid black;}
 
 #lineplot_dropdown_2 {display:block; 
                       width:100%; 
-                      border:1px solid black;
-                      background-color:#ecf0f5;}
+                      border:0px solid black;}
 
 #lineplot_dropdown_3 {display:block; 
                       width:100%; 
-                      border:1px solid black;
-                      background-color:#ecf0f5;}
+                      border:0px solid black;}
 
 #lineplot_dropdown_4 {display:block; 
                       width:100%; 
-                      border:1px solid black;
-                      background-color:#ecf0f5;}*/
+                      border:0px solid black;}
 
 #eqnCreate_showEquationBuilding {font-size: 1.5em;}
  
