added debug tab (working)
added IO list and Ids, updated icons

--- a/www/css/nonColorStyling.css
+++ b/www/css/nonColorStyling.css
@@ -119,4 +119,7 @@
                                                         padding-left: 50px;}  */
 
 
-.glyphicon-arrow-right {font-size:  0.8em;}                             
+.glyphicon-arrow-right {font-size:  0.8em;}       
+
+#debug_text_view {background-color: lightgray;
+                  height: 500px}
