--- a/www/css/nonColorStyling.css
+++ b/www/css/nonColorStyling.css
@@ -1,73 +1,108 @@
-/* Main side bar______________________________________________________________________________ */
-.main-sidebar { font-size: 18px;
-                /*font-weight: bold;*/
-                width:250px;
-            }
+/*
+Main Styling for App that creates standard css for base styling.
+*/
+
+/* Main side bar______________________________________________________________*/
+.main-sidebar { 
+  font-size: 18px;
+  width: 250px;
+}
 
 /*top active nav link*/
 /* This controls the top level of the nav sidebar */
-.sidebar-light-primary .nav-sidebar > .nav-item > .nav-link.active {font-size: 1.15rem;
-                                                                    border-left: 5px solid #3c8dbc;
-                                                                } 
+.sidebar-light-primary .nav-sidebar > .nav-item > .nav-link.active {
+  font-size: 1.15rem;
+  border-left: 5px solid #3c8dbc;
+} 
             
 /* Logo Image */ 
-.brand-link .brand-image {background-color:white;
-              max-height: 40px;}
+.brand-link .brand-image {
+  background-color:white;
+  max-height: 40px;
+}
+              
 /* Title word in top left corner */ 
-.brand-link {line-height: 1.25;}
-.brand-text {font-weight: bold !important; 
-             font-size: 1.5rem;
-             padding-left: 15px;}
+.brand-link {
+  line-height: 1.25;
+}
 
-/* Boxes_____________________________________________________________________________________ */
-.card card-primary {min-height: 300px}
-.card-title {font-weight: bold;
-             font-size: 1.15rem;}
+.brand-text {
+  font-weight: bold !important; 
+  font-size: 1.5rem;
+  padding-left: 15px;
+}
+
+/* Boxes______________________________________________________________________*/
+.card card-primary {
+  min-height: 300px;
+}
+
+.card-title {
+  font-weight: bold;
+  font-size: 1.15rem;
+}
 
 
-/* Tabbox _________________________________________________________________________________ */
+/* Tabbox ____________________________________________________________________*/
 /*Selected tabs of tab box*/
-.nav-pills {font-size: 1.15rem;
-            font-weight: bold;}
+.nav-pills {
+  font-size: 1.15rem;
+  font-weight: bold;
+}
 
 
 /* Removes outline from small buttons on box pabels */
-.btn.btn-tool.btn-sm {border-style: none}
+.btn.btn-tool.btn-sm {
+  border-style: none
+}
 
 
-#sw-content-customize_dropdown_button {min-width: 50rem;
-                                          min-height: 25rem;}
+#sw-content-customize_dropdown_button {
+  min-width: 50rem;
+  min-height: 25rem;
+}
 
 /*Change size and position of arrow on DROPDOWN to match dropdownbutton*/
-#customize_dropdown_button > .glyphicon-triangle-bottom {font-size: 9px;
-                                                         top: -2px;
-                                                         left: 3px;}
+#customize_dropdown_button > .glyphicon-triangle-bottom {
+  font-size: 9px;
+  top: -2px;
+  left: 3px;
+}
 
-#lineplot_dropdown_1 > .glyphicon-triangle-bottom {font-size: 9px;
-                                                         top: -2px;
-                                                         left: 3px;}                                                      
-#lineplot_dropdown_2 > .glyphicon-triangle-bottom {font-size: 9px;
-                                                         top: -2px;
-                                                         left: 3px;}
-#lineplot_dropdown_3 > .glyphicon-triangle-bottom {font-size: 9px;
-                                                         top: -2px;
-                                                         left: 3px;}
-#lineplot_dropdown_4 > .glyphicon-triangle-bottom {font-size: 9px;
-                                                         top: -2px;
-                                                         left: 3px;}
+#lineplot_dropdown_1 > .glyphicon-triangle-bottom {
+  font-size: 9px;
+  top: -2px;
+  left: 3px;
+}                                                      
+#lineplot_dropdown_2 > .glyphicon-triangle-bottom {
+  font-size: 9px;
+  top: -2px;
+  left: 3px;
+}
+#lineplot_dropdown_3 > .glyphicon-triangle-bottom {
+  font-size: 9px;
+  top: -2px;
+  left: 3px;
+}
+#lineplot_dropdown_4 > .glyphicon-triangle-bottom {
+  font-size: 9px;
+  top: -2px;
+  left: 3px;
+}
 
 
-/*These three tags make it so the fancy buttons on the homepage are highlighted on hover*/
+/*These three tags make it so the fancy buttons on the homepage are 
+highlighted on hover*/
 #HOME_build_model:hover{
-        filter: brightness(50%);
+  filter: brightness(50%);
 }
 
 #HOME_to_load_database:hover{
-        filter: brightness(50%);
+  filter: brightness(50%);
 }
 
 #Home_to_load_datatable:hover{
-        filter: brightness(50%);
+  filter: brightness(50%);
 }
 
 #tabbox_build_equations {
@@ -82,44 +117,66 @@
   min-height: 300px;
 }
 
-#myVariables_DT tr {background-color: #fff0;
-                    border: 0px solid black;}
+#myVariables_DT tr {
+  background-color: #fff0;
+  border: 0px solid black;
+}
 
-#myVariables_DT th {font-weight:bold;
-                    background-color:#fff0;
-                    color: black;
-                    border: 0px solid black;}
+#myVariables_DT th {
+  font-weight:bold;
+  background-color:#fff0;
+  color: black;
+  border: 0px solid black;
+}
 
-#sw-content-plot_option_dropdown {min-width: 50rem;
-                                 min-height: 25rem;}
-
-
-#lineplot_dropdown_1 {display:block; 
-                      width:100%; 
-                      border:0px solid black;}
-
-#lineplot_dropdown_2 {display:block; 
-                      width:100%; 
-                      border:0px solid black;}
-
-#lineplot_dropdown_3 {display:block; 
-                      width:100%; 
-                      border:0px solid black;}
-
-#lineplot_dropdown_4 {display:block; 
-                      width:100%; 
-                      border:0px solid black;}
-
-#eqnCreate_showEquationBuilding {font-size: 1.5em;}
-
-#build_equation_edit {font-size: 1.5em;}
- 
- /*                                }
- #eqnCreate_showEquationBuilding > div.MathJax_Display {text-align: left !important;
-                                                        padding-left: 50px;}  */
+#sw-content-plot_option_dropdown {
+  min-width: 50rem;
+  min-height: 25rem;
+}
 
 
-.glyphicon-arrow-right {font-size:  0.8em;}       
+#lineplot_dropdown_1 {
+  display: block; 
+  width: 100%; 
+  border: 1px solid lightgrey;
+}
 
-#debug_text_view {background-color: lightgray;
-                  height: 500px}
+#lineplot_dropdown_2 {
+  display: block; 
+  width: 100%; 
+  border: 1px solid lightgrey;
+}
+
+#lineplot_dropdown_3 {
+  display: block; 
+  width: 100%; 
+  border: 1px solid lightgrey;
+}
+
+#lineplot_dropdown_4 {
+  display: block; 
+  width: 100%; 
+  border: 1px solid lightgrey;
+}
+
+#eqnCreate_showEquationBuilding {
+  font-size: 1.5em;
+}
+
+#build_equation_edit {
+  font-size: 1.5em;
+}
+
+#lineplot_variable_dropdown_button {
+  background-color: #f8f9fa;
+  color: black;
+}
+
+.glyphicon-arrow-right {
+  font-size:  0.8em;
+}       
+
+#debug_text_view {
+  background-color: lightgray;
+  height: 500px;
+}
