doc: export update

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,3 +1,11 @@
 .underline {
     text-decoration: underline;
   }
+
+  .borderblack {
+    border: 1px solid black;
+  }
+
+  .bordergrey {
+    border: 1px solid lightgrey;
+  }
