docs: docker download

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -11,6 +11,10 @@
     padding-bottom: 15px;
     margin-bottom: 20px;
   }
+  
+  .bottomMargin {
+    margin-bottom: 20px;
+  }
 
   .center {
     text-align: center;
