rand: param name change, bug fix

--- a/www/css/nonColorStyling.css
+++ b/www/css/nonColorStyling.css
@@ -181,3 +181,11 @@ highlighted on hover*/
   background-color: lightgray;
   height: 500px;
 }
+
+#plot_var_table {
+  z-index: 2;
+}
+
+#plot_param_table {
+  z-index: 2;
+}
