--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,26 +1,37 @@
 .underline {
-    text-decoration: underline;
-  }
+  text-decoration: underline;
+}
 
-  .borderblack {
-    border: 1px solid black;
-  }
+.borderblack {
+  border: 1px solid black;
+}
 
-  .bordergrey {
-    border: 1px solid lightgrey;
-    padding-bottom: 15px;
-    margin-bottom: 20px;
-  }
-  
-  .bottomMargin {
-    margin-bottom: 20px;
-  }
+.bordergrey {
+  border: 1px solid lightgrey;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
 
-  .center {
-    text-align: center;
-  }
+.bordergrey2 {
+  border: 0px solid lightgrey;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
 
-  .botTopMargin {
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
+.bottomMargin {
+  border: 0px solid lightgrey;
+  margin-bottom: 20px;
+}
+
+.bottomPadding {
+  padding-bottom: 15px;
+}
+
+.center {
+  text-align: center;
+}
+
+.botTopMargin {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
