--- a/www/css/nonColorStyling.css
+++ b/www/css/nonColorStyling.css
@@ -178,6 +178,11 @@ highlighted on hover*/
   font-size: 1.5em;
 }
 
+
+#diffeq_display_diffEqs_MathJax .MathJax_Display {
+  text-align: left !important;
+}
+
 #lineplot_variable_dropdown_button {
   background-color: #f8f9fa;
   color: black;
